click on restaurant menu with filtering done