@@ -23,6 +23,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
@@ -40,8 +41,7 @@ public class SecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 // 1. Prvo primeni CORS konfiguraciju
-                .cors(withDefaults())
-                // 2. Isključi CSRF
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))                // 2. Isključi CSRF
                 .csrf(AbstractHttpConfigurer::disable)
                 // 3. Definiši pravila za autorizaciju
                 .authorizeHttpRequests(req ->
@@ -60,10 +60,18 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // ** Obavezno proveri da li je port TAČAN (5173, 5174, itd.) **
+        // Dozvoljavamo pristup sa tvog frontend servera (proveri port ako je drugačiji)
         configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:5174"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*")); // Dozvoli sve hedere
+
+        // === PREPORUČENA IZMENA ===
+        // Eksplicitno navodimo dozvoljene metode
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // === PREPORUČENA IZMENA ===
+        // Eksplicitno navodimo dozvoljene headere (Authorization je ključan za JWT)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control"));
+
+        // Ovo ostaje isto
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
